# MarketResearch-IntelliAssistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ProblemStatement.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: azure-static-web-apps-green-river-07505240f.yml  deploy.yml
docs/: BUILD_STATUS.md  PROGRESS.md
docs/adr/: ADR-000-template.md  ADR-001-content-extraction.md  ADR-002-scraping-architecture.md  ADR-003-llm-composition.md  ADR-004-auth-strategy.md  ADR-005-pipeline-performance.md  ADR-006-azure-deployment.md  ADR-007-llm-judge-design.md
docs/tasks/: phase-0-scaffold.md  phase-1-scraping.md  phase-2-llm-pipeline.md  phase-3-frontend.md  phase-4-auth-persistence.md  phase-5-azure-deployment.md  phase-6-stretch.md
infra/: Dockerfile  docker-compose.yml
src/backend/: config.py  database.py  main.py  models.py
src/backend/api/: auth.py  research.py
src/backend/pipeline/: judge.py  llm.py  orchestrator.py  scraper.py  summarizer.py
src/backend/pipeline/prompts/: __init__.py  judge.j2  summarize.j2
src/frontend/: .env.example  index.html  package-lock.json  package.json  staticwebapp.config.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.vue  api.ts  router.ts  style.css
src/frontend/src/pages/: History.vue  Login.vue  NewResearch.vue
tests/: conftest.py
tests/backend/pipeline/: test_scraper.py
