[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-research-intelliassistant"
version = "0.1.0"
description = "Market Research Intelligence Assistant — collect, analyze, and summarize market intelligence from public sources"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
scraping = [
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "lxml[html-clean]>=4.9.0",
]
llm = [
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "jinja2>=3.1.0",
]
backend = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sse-starlette>=2.1.0",
    "market-research-intelliassistant[scraping]",
    "market-research-intelliassistant[llm]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/backend --cov-report=term-missing"